--- a/templates/g5_helium/custom/scss/tchooz.scss
+++ b/templates/g5_helium/custom/scss/tchooz.scss
@@ -735,7 +735,7 @@ input:focus + .em-slider {
   color: $blue-500;
 }
 .em-gray-color{
-  color: $em-grey;
+  color: $grey;
 }
 .em-neutral-300-color{
   color: $neutral-300;
@@ -780,7 +780,7 @@ input:focus + .em-slider {
   background: $em-blue;
 }
 .em-gray-bg{
-  background: $em-grey;
+  background: $grey;
 }
 .em-lightgray-bg{
   background: #F5F6F6;
